--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
@@ -7,7 +7,7 @@
           <arena-players [arena]="arena" (arenaPlayerClick)="loadArenaPlayerStatistics($event.username)"/>
         </div>
 
-        <div class="col-lg-3 col-md-12 col-sm-12 order-lg-3 order-2" [@fadeInRightOnEnter]>
+        <div class="col-lg-3 col-md-12 col-sm-12 order-lg-3 order-2" >
           <arena-countdown [arena]="arena"/>
           <arena-chapters [arena]="arena"/>
         </div>
