--- a/src/app/modules/contests/pages/contest/contest-problems/contest-problems.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problems/contest-problems.component.html
@@ -59,7 +59,7 @@
 
       </div>
 
-      <div [@fadeInRightOnEnter]="" class="col-lg-3 col-md-12 col-sm-12 order-1 order-lg-2">
+      <div class="col-lg-3 col-md-12 col-sm-12 order-1 order-lg-2">
         <contest-card-countdown *ngIf="contest" [contest]="contest"></contest-card-countdown>
       </div>
     </div>
