--- a/src/app/modules/lugavar/lugavar.component.html
+++ b/src/app/modules/lugavar/lugavar.component.html
@@ -27,7 +27,7 @@
 
         <div class="card-footer d-flex justify-content-between">
           <like-button [likes]="dailyTrick.likes" [submitUrl]="'daily-trick-like'"></like-button>
-          <clipboard-button [text]="dailyTrick.codeTemplate" [buttonClass]="'btn btn-info btn-sm'">
+          <clipboard-button [text]="dailyTrick.codeTemplate">
           </clipboard-button>
         </div>
       </kep-card>
