--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="col-12 col-md-6">
-        <a [@fadeInRightOnEnter] class="card card-info" routerLink="/learn/blog/post/46">
+        <a  class="card card-info" routerLink="/learn/blog/post/46">
           <div class="card-header">
             <div class="card-title">
               {{ 'AboutVerdicts' | translate }}
