--- a/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.html
@@ -1,6 +1,6 @@
 <div class="card mt-2">
   <div class="card-header">
-    <div [@fadeInRightOnEnter] class="card-title text-dark">
+    <div  class="card-title text-dark">
       {{ 'Topics' | translate }}
     </div>
   </div>
@@ -10,7 +10,7 @@
       <div class="swiper-slide">
         <div
           (click)="click(1)"
-          [@fadeInRightOnEnter]
+
           [ngClass]="{'active': activeTopic == 1}"
           class="topic"
           container="body"
@@ -24,7 +24,7 @@
       <div class="swiper-slide">
         <div
           (click)="click(2)"
-          [@fadeInRightOnEnter]
+
           [ngClass]="{'active': activeTopic == 2}"
           class="topic"
           container="body"
@@ -38,7 +38,7 @@
       <div class="swiper-slide">
         <div
           (click)="click(3)"
-          [@fadeInRightOnEnter]
+
           [ngClass]="{'active': activeTopic == 3}"
           class="topic"
           container="body"
@@ -52,7 +52,7 @@
       <div class="swiper-slide">
         <div
           (click)="click(4)"
-          [@fadeInRightOnEnter]
+
           [ngClass]="{'active': activeTopic == 4}"
           class="topic"
           container="body"
@@ -66,7 +66,7 @@
       <div class="swiper-slide">
         <div
           (click)="click(5)"
-          [@fadeInRightOnEnter]
+
           [ngClass]="{'active': activeTopic == 5}"
           class="topic"
           container="body"
@@ -80,7 +80,7 @@
       <div class="swiper-slide">
         <div
           (click)="click(6)"
-          [@fadeInRightOnEnter]
+
           [ngClass]="{'active': activeTopic == 6}"
           class="topic"
           container="body"
@@ -94,7 +94,7 @@
       <div class="swiper-slide">
         <div
           (click)="click(7)"
-          [@fadeInRightOnEnter]
+
           [ngClass]="{'active': activeTopic == 7}"
           class="topic"
           container="body"
