--- a/src/app/modules/blog/pages/blog-list/blog-list.component.html
+++ b/src/app/modules/blog/pages/blog-list/blog-list.component.html
@@ -25,7 +25,7 @@
         }
       </div>
 
-      <div [@fadeInRightOnEnter] class="col-lg-3 col-md-6 col-sm-12 order-md-2 order-1">
+      <div  class="col-lg-3 col-md-6 col-sm-12 order-md-2 order-1">
         <kep-card>
           <div class="card-body">
             <div class="blog-search">
