--- a/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
@@ -31,7 +31,7 @@
         }
       </div>
 
-      <div [@fadeInRightOnEnter] class="col-lg-3 col-md-12 col-sm-12 order-1 order-lg-2">
+      <div  class="col-lg-3 col-md-12 col-sm-12 order-1 order-lg-2">
         <contest-card-countdown *ngIf="contest" [contest]="contest"/>
         <contest-attempts-filter [contest]="contest" (filterChange)="filterApply($event)"/>
       </div>
