--- a/src/app/modules/contests/pages/contest/contest-questions/contest-questions.component.html
+++ b/src/app/modules/contests/pages/contest/contest-questions/contest-questions.component.html
@@ -65,7 +65,7 @@
         </kep-card>
       </div>
 
-      <div [@fadeInRightOnEnter]="" class="col-lg-3 col-md-12 col-sm-12 order-1 order-lg-2">
+      <div class="col-lg-3 col-md-12 col-sm-12 order-1 order-lg-2">
         <contest-card-countdown *ngIf="contest" [contest]="contest"></contest-card-countdown>
       </div>
     </div>
