--- a/src/app/modules/contests/pages/contest/contest-registrants/contest-registrants.component.html
+++ b/src/app/modules/contests/pages/contest/contest-registrants/contest-registrants.component.html
@@ -1,5 +1,5 @@
 <div
-  class="content-wrapper container-xxl p-0 contests-colors contests-color contest-{{ contest.id }} {{ contest.title }} contest-type-{{ contest.type }}">
+  class="content-wrapper container-xxl p-0">
   <div class="content-body">
     <!-- content-header component -->
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
@@ -13,43 +13,50 @@
             </div>
           </kep-card>
 
-          <kep-card>
-            <div class="table-responsive beautiful-table">
-              <table class="table">
-                <thead>
-                <tr>
-                  <th>#</th>
-                  <th>
-                    <kep-icon name="user"></kep-icon>
-                    {{ 'Users' | translate }}
-                  </th>
-                  <th>
-                    <kep-icon name="rating"></kep-icon>
-                  </th>
-                </tr>
-                </thead>
-                <tbody>
-                  @for (registrant of registrants; track registrant.username) {
-                    <tr>
-                      <td class="text-dark">{{ $index + 1 }}</td>
-                      <td>
-                        <contestant-view [team]="registrant.team" [user]="registrant"></contestant-view>
-                      </td>
-                      <td>
-                        <span *ngIf="registrant.rating"
-                              class="badge bg-{{ registrant.rating | contestsRatingColor }}-transparent">
-                          {{ registrant.rating }}
-                        </span>
-                      </td>
-                    </tr>
-                  }
-                </tbody>
-              </table>
-            </div>
-          </kep-card>
+          @if (isLoading) {
+            <kep-card [cardHeight]="'300px'">
+              <spinner [height]="'300px'"/>
+            </kep-card>
+          } @else {
+            <kep-card>
+              <div class="table-responsive beautiful-table">
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>
+                      <kep-icon name="user"></kep-icon>
+                      {{ 'Users' | translate }}
+                    </th>
+                    <th>
+                      <kep-icon name="rating"></kep-icon>
+                    </th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                    @for (registrant of registrants; track registrant.username) {
+                      <tr>
+                        <td class="text-dark">{{ $index + 1 }}</td>
+                        <td>
+                          <contestant-view [team]="registrant.team" [user]="registrant"></contestant-view>
+                        </td>
+                        <td>
+                          <span *ngIf="registrant.rating"
+                                class="badge bg-{{ registrant.rating | contestsRatingColor }}-transparent">
+                            {{ registrant.rating }}
+                          </span>
+                        </td>
+                      </tr>
+                    }
+                  </tbody>
+                </table>
+              </div>
+            </kep-card>
+          }
+
         </div>
 
-        <div [@fadeInRightOnEnter] class="col-lg-3 col-12 order-1 order-lg-2">
+        <div  class="col-lg-3 col-12 order-1 order-lg-2">
           @if (contest) {
             <contest-card-countdown [contest]="contest"></contest-card-countdown>
           }
