--- a/src/app/modules/projects/ui/pages/project-detail/project-detail.page.html
+++ b/src/app/modules/projects/ui/pages/project-detail/project-detail.page.html
@@ -40,7 +40,7 @@
             </kep-card>
           </div>
 
-          <div [@fadeInRightOnEnter] class="col-lg-3 col-md-12 col-sm-12">
+          <div  class="col-lg-3 col-md-12 col-sm-12">
             <project-sidebar [project]="data" (submitEvent)="activeId=2;"/>
           </div>
         </div>
