study plan card bg color fix

--- a/src/app/modules/problems/components/study-plan-card/study-plan-card.component.scss
+++ b/src/app/modules/problems/components/study-plan-card/study-plan-card.component.scss
@@ -2,7 +2,7 @@
 @import 'styles/colors/study-plans';
 
 .study-plan-1 .card {
-  background: linear-gradient(to right, lighten($study-plan-1, 5), lighten($study-plan-1, 25));
+  background: linear-gradient(to right, lighten($study-plan-1, 5), lighten($study-plan-1, 25)) !important;
 
   @include dark-layout {
     background: linear-gradient(to right, darken($study-plan-1, 25), darken($study-plan-1, 20)) !important;
@@ -10,7 +10,7 @@
 }
 
 .study-plan-2 .card {
-  background: linear-gradient(to right, mix(white, $study-plan-2, 5), mix(white, $study-plan-2, 25));
+  background: linear-gradient(to right, mix(white, $study-plan-2, 5), mix(white, $study-plan-2, 25)) !important;
 
   @include dark-layout {
     background: linear-gradient(to right, mix(black, $study-plan-2, 55), mix(black, $study-plan-2, 45)) !important;
@@ -18,7 +18,7 @@
 }
 
 .study-plan-3 .card {
-  background: linear-gradient(to right, mix(white, $study-plan-3, 5), mix(white, $study-plan-3, 25));
+  background: linear-gradient(to right, mix(white, $study-plan-3, 5), mix(white, $study-plan-3, 25)) !important;
 
   @include dark-layout {
     background: linear-gradient(to right, mix(black, $study-plan-3, 40), mix(black, $study-plan-3, 30)) !important;
