--- a/src/app/modules/hackathons/ui/pages/hackathon/hackathon-projects/hackathon-projects.component.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon/hackathon-projects/hackathon-projects.component.html
@@ -1,11 +1,13 @@
 <content-header [contentHeader]="contentHeader"></content-header>
 <kep-card>
   <div class="row match-height">
-    <div class="col-md-6 col-lg-4" *ngFor="let p of projects">
-      <div class="mb-2">
-        <span class="badge bg-primary me-1">{{ p.symbol }}</span>
+    @for (hackathonProject of projects; track hackathonProject.id) {
+      <div class="col-md-6 col-lg-4">
+        <div class="mb-2">
+          <span class="badge bg-primary me-1">{{ hackathonProject.symbol }}</span>
+        </div>
+        <project-card [project]="hackathonProject.project"></project-card>
       </div>
-      <project-card [project]="p.project"></project-card>
-    </div>
+    }
   </div>
 </kep-card>
