--- a/src/app/modules/hackathons/ui/pages/hackathon/hackathon-registrants/hackathon-registrants.component.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon/hackathon-registrants/hackathon-registrants.component.html
@@ -1,7 +1,13 @@
 <content-header [contentHeader]="contentHeader"></content-header>
-<kep-card *ngIf="registrants.length">
-  <ul class="list-unstyled mb-0">
-    <li *ngFor="let r of registrants">{{ r.username }}</li>
-  </ul>
-</kep-card>
-<div *ngIf="!registrants.length && !isLoading" class="p-2">No registrants</div>
+@if (registrants.length) {
+  <kep-card>
+    <ul class="list-unstyled mb-0">
+      @for (registrant of registrants; track registrant.id) {
+        <li>{{ registrant.username }}</li>
+      }
+    </ul>
+  </kep-card>
+}
+@if (!registrants.length && !isLoading) {
+  <div class="p-2">No registrants</div>
+}
