--- a/src/app/modules/hackathons/ui/pages/hackathon/hackathon-standings/hackathon-standings.component.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon/hackathon-standings/hackathon-standings.component.html
@@ -6,14 +6,22 @@
       <th>#</th>
       <th>User</th>
       <th>Points</th>
+      @for (project of projects; track project.symbol) {
+        <th>{{ project.symbol }}</th>
+      }
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let s of standings; let i = index">
-      <td>{{ i + 1 }}</td>
-      <td>{{ s.username }}</td>
-      <td>{{ s.points }}</td>
-    </tr>
+    @for (standing of standings; track standing.username; let rowIndex = $index) {
+      <tr>
+        <td>{{ rowIndex + 1 }}</td>
+        <td>{{ standing.username }}</td>
+        <td>{{ standing.points }}</td>
+        @for (project of projects; track project.symbol) {
+          <td>{{ getProjectResult(standing, project.symbol) }}</td>
+        }
+      </tr>
+    }
     </tbody>
   </table>
 </kep-card>
