--- a/src/app/modules/hackathons/ui/pages/hackathons-list/hackathons-list.page.html
+++ b/src/app/modules/hackathons/ui/pages/hackathons-list/hackathons-list.page.html
@@ -1,8 +1,10 @@
 <content-header [contentHeader]="contentHeader"></content-header>
 <kep-card>
   <div class="row match-height">
-    <div class="col-md-6 col-lg-4" *ngFor="let h of hackathons">
-      <hackathon-list-card [hackathon]="h"></hackathon-list-card>
-    </div>
+    @for (hackathon of hackathons; track hackathon.id) {
+      <div class="col-md-6 col-lg-4">
+        <hackathon-list-card [hackathon]="hackathon"></hackathon-list-card>
+      </div>
+    }
   </div>
 </kep-card>
