--- a/src/app/modules/hackathons/ui/pages/hackathon/hackathon.page.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon/hackathon.page.html
@@ -1,2 +1,2 @@
-<content-header [contentHeader]="contentHeader"></content-header>
+<app-content-header [contentHeader]="contentHeader"></app-content-header>
 <hackathon-tab [hackathon]="data"></hackathon-tab>
