--- a/src/app/modules/hackathons/ui/pages/hackathons-list/hackathons-list.page.html
+++ b/src/app/modules/hackathons/ui/pages/hackathons-list/hackathons-list.page.html
@@ -1,4 +1,4 @@
-<content-header [contentHeader]="contentHeader"></content-header>
+<app-content-header [contentHeader]="contentHeader"></app-content-header>
 <kep-card>
   <div class="row match-height">
     @for (hackathon of hackathons; track hackathon.id) {
