--- a/src/app/modules/projects/ui/components/project-attempts/attempts-table/attempts-table.component.html
+++ b/src/app/modules/projects/ui/components/project-attempts/attempts-table/attempts-table.component.html
@@ -52,7 +52,7 @@
               {{ attempt.verdictTitle }}
               @if (attempt.verdict == 1) {
                 <span>
-                  {{ attempt.kepcoins }}/{{ project.kepcoins }}
+                  {{ attempt.kepcoins }}/{{ project?.kepcoins }}
                 </span>
               }
             </span>
