--- a/src/app/modules/hackathons/ui/pages/hackathon/hackathon-projects/hackathon-projects.component.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon/hackathon-projects/hackathon-projects.component.html
@@ -1,13 +1,16 @@
-<content-header [contentHeader]="contentHeader"></content-header>
-<kep-card>
+<app-content-header [contentHeader]="contentHeader"></app-content-header>
+<hackathon-tab [hackathon]="{id: hackathonId}"/>
+
+@if (isLoading) {
+  <kep-card [cardHeight]="'300px'">
+    <spinner></spinner>
+  </kep-card>
+} @else {
   <div class="row match-height">
-    @for (hackathonProject of projects; track hackathonProject.id) {
+    @for (hackathonProject of data; track hackathonProject.id) {
       <div class="col-md-6 col-lg-4">
-        <div class="mb-2">
-          <span class="badge bg-primary me-1">{{ hackathonProject.symbol }}</span>
-        </div>
         <project-card [project]="hackathonProject.project"></project-card>
       </div>
     }
   </div>
-</kep-card>
+}
