--- a/src/app/modules/hackathons/ui/pages/hackathon/hackathon-registrants/hackathon-registrants.component.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon/hackathon-registrants/hackathon-registrants.component.html
@@ -1,4 +1,4 @@
-<content-header [contentHeader]="contentHeader"></content-header>
+<app-content-header [contentHeader]="contentHeader"></app-content-header>
 @if (registrants.length) {
   <kep-card>
     <ul class="list-unstyled mb-0">
