--- a/src/app/modules/hackathons/ui/pages/hackathon/hackathon-standings/hackathon-standings.component.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon/hackathon-standings/hackathon-standings.component.html
@@ -1,4 +1,4 @@
-<content-header [contentHeader]="contentHeader"></content-header>
+<app-content-header [contentHeader]="contentHeader"></app-content-header>
 <kep-card>
   <table class="table">
     <thead>
