--- a/src/app/modules/projects/ui/components/project-attempts/attempts-table/attempts-table.component.html
+++ b/src/app/modules/projects/ui/components/project-attempts/attempts-table/attempts-table.component.html
@@ -8,23 +8,26 @@
       <th>{{ 'User' | translate }}</th>
       <th>{{ 'Problem' | translate }}</th>
       <th>{{ 'Verdict' | translate }}</th>
-      <th>{{ 'Time' | translate }}</th>
-      <th>{{ 'Memory' | translate }}</th>
+      <th>{{ 'Time' | translate }}/{{ 'Memory' | translate }}</th>
       <th></th>
     </tr>
     </thead>
     <tbody>
       @for (attempt of attempts; track attempt.id; let i = $index) {
         <tr
-
           [ngClass]="{'bg-light-info': attempt?.username == currentUser?.username}">
           <td class="attempt-id">
             {{ attempt.id }}
           </td>
           <td>
-            <span class="badge bg-success-transparent text-center" style="width: 130px;">
-              {{ attempt.created | date:"yyyy/MM/dd HH:mm:ss" }}
-            </span>
+            <div class="">
+              <div class="text-center">
+                {{ attempt.created | date:"yyyy/MM/dd" }}
+              </div>
+              <div class="text-center">
+                {{ attempt.created | date:"HH:mm:ss" }}
+              </div>
+            </div>
           </td>
           <td>
             <project-technology [name]="attempt.technology"/>
@@ -57,11 +60,15 @@
               }
             </span>
           </td>
-          <td class="td-content">
-            <span class="badge bg-info">{{ attempt.time }} {{ 'MS' | translate }}</span>
-          </td>
-          <td class="td-content">
-            <span class="badge bg-primary">{{ attempt.memory }} {{ 'KB' | translate }}</span>
+          <td>
+            <div class="d-flex align-items-center text-dark text-nowrap">
+              <kep-icon color="info" type="duotone" name="watch"/>
+              {{ attempt.time }} {{ 'MS' | translate }}
+            </div>
+            <div class="d-flex align-items-center text-dark text-nowrap">
+              <kep-icon color="primary" type="duotone" name="external-drive"/>
+              {{ attempt.memory }} {{ 'KB' | translate }}
+            </div>
           </td>
           <td>
             @if (currentUser?.username == attempt.username || currentUser?.isSuperuser) {
@@ -88,8 +95,7 @@
       <th>{{ 'User' | translate }}</th>
       <th>{{ 'Problem' | translate }}</th>
       <th>{{ 'Verdict' | translate }}</th>
-      <th>{{ 'Time' | translate }}</th>
-      <th>{{ 'Memory' | translate }}</th>
+      <th>{{ 'Time' | translate }}/{{ 'Memory' | translate }}</th>
       <th></th>
     </tr>
     </tfoot>
