--- a/src/app/modules/projects/ui/components/project-technology/project-technology.component.scss
+++ b/src/app/modules/projects/ui/components/project-technology/project-technology.component.scss
@@ -59,3 +59,15 @@
     box-shadow: 0px 0px 5px #e8d44d;
   }
 }
+
+.technology-Angular {
+  background: #b124f3;
+
+  @include dark-layout {
+    background: #f52aa2;
+  }
+
+  &:hover {
+    box-shadow: 0px 0px 5px #b124f3;
+  }
+}
