--- a/src/@core/components/switcher/switcher.component.html
+++ b/src/@core/components/switcher/switcher.component.html
@@ -500,7 +500,7 @@
                         <input
                           (click)="updateBgPattern('bgpattern8')"
                           [checked]="localData['bgPatternImage'] == 'bgpattern8'"
-                          class="form-check-input patternimage-input bg-pattern8"
+                          class="form-check-input patternimage-input"
                           id="switcher-pattern-img7"
                           name="background-pattern"
                           type="radio"
