--- a/src/app/modules/hackathons/ui/pages/hackathons-list/hackathons-list.page.html
+++ b/src/app/modules/hackathons/ui/pages/hackathons-list/hackathons-list.page.html
@@ -3,7 +3,7 @@
   <div class="row match-height">
     @for (hackathon of hackathons; track hackathon.id) {
       <div class="col-md-6 col-lg-4">
-        <hackathon-list-card [hackathon]="hackathon"></hackathon-list-card>
+        <hackathon-card [hackathon]="hackathon"></hackathon-card>
       </div>
     }
   </div>
