--- a/src/app/modules/projects/ui/components/project-attempts/attempts-table/attempts-table.component.html
+++ b/src/app/modules/projects/ui/components/project-attempts/attempts-table/attempts-table.component.html
@@ -85,6 +85,12 @@
             </td>
           }
         </tr>
+      } @empty {
+        <tr>
+          <td colspan="8">
+            <empty-result></empty-result>
+          </td>
+        </tr>
       }
     </tbody>
     <tfoot>
