--- a/src/assets/scss/_switcher.scss
+++ b/src/assets/scss/_switcher.scss
@@ -1079,11 +1079,11 @@
 
 // bg-pattern8 start
 [data-pattern-img="bgpattern8"] {
-  --bg-pattern: url(../images/media/Patterns/light/p8.svg);
+  // --bg-pattern: url(../images/media/Patterns/light/p8.svg);
 }
 
 [data-pattern-img="bgpattern8"][data-theme-mode="dark"] {
-  --bg-pattern: url(../images/media/Patterns/dark/p8-dark.svg);
+  // --bg-pattern: url(../images/media/Patterns/dark/p8-dark.svg);
 }
 
 
