refactor hackathon countdown

--- a/src/app/modules/hackathons/ui/components/hackathon-tab/hackathon-tab.component.html
+++ b/src/app/modules/hackathons/ui/components/hackathon-tab/hackathon-tab.component.html
@@ -52,7 +52,7 @@
           <div class="mb-2">
             <kep-icon name="ranking"/>
           </div>
-          {{ 'CONTESTS.STANDINGS' | translate }}</a>
+          {{ 'HACKATHONS.STANDINGS' | translate }}</a>
       </li>
     }
     @if (hackathon?.status == -1) {
